# slambook2

ch2/: CMakeLists.txt  helloSLAM.cpp  libHelloSLAM.cpp  useHello.cpp
ch2/test/: CMakeLists.txt  useHello.cpp
ch3/ex5/: ex  ex.cpp
ch3/ex6/: ex.cpp
ch3/ex7/: ex  ex.cpp
ch3/example/: CMakeLists.txt  coordinateTransform.cpp  ex  plotTrajectory.cpp
ch3/useEigen/: CMakeLists.txt  eigenMatrix.cpp
ch3/useGeometry/: CMakeLists.txt  useGeometry.cpp
ch3/visualize/: CMakeLists.txt  visualize.cpp
ch4/: CMakeLists.txt  useSophus.cpp
ch4/example/: CMakeLists.txt  trajectoryError.cpp
ch5/example/: CMakeLists.txt  imageBasics.cpp
ch5/pointcloud_merge/: CMakeLists.txt  join.cpp
ch5/stereo/: CMakeLists.txt  stereo.cpp
ch5/undistort/: CMakeLists.txt  undistortImage.cpp
ch6/ceres_curve_fitting/: CMakeLists.txt  ceresCurveFitting.cpp  gaussNewton.cpp
ch6/ceres_curve_fitting/cmake/: FindG2O.cmake
ch7/: CMakeLists.txt  feature_mapping.cpp  pose2d2d.cpp  pose3d2d.cpp  pose3d3d.cpp  triangulation.cpp
